players can only join lobby with valid player id
